<resources>
    <string name="app_name" translatable="false">Mixology</string>

    <!-- activity titles -->
    <string name="title_activity_details" translatable="false">ActivityDetails</string>
    <string name="title_activity_search" translatable="false">ActivitySearch</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_detail_share">Share</string>

    <!-- Content Description for accessibility -->
    <string name="content_desc_drink_image">Image of the cocktail</string>
    <string name="content_desc_Add_Delete_button">Add or delete</string>
    <string name="content_desc_up_navigation">Up navigation</string>
    <string name="content_desc_sponsored">Sponsored</string>
    <string name="content_desc_ingredients_image">Ingredients Image</string>
    <string name="content_desc_logo_img">Logo Image</string>

    <!-- static data set in details fragment -->
    <string name="detail_screen_instructions">Instructions</string>
    <string name="detail_screen_ingredients">Ingredients</string>

    <!-- Intents -->
    <string name="intent_search_intent_query" translatable="false">Query</string>
    <string name="intent_details_intent_cocktail" translatable="false">Cocktail</string>

    <!-- Add or delete to database -->
    <string name="drink_added">Drink Saved</string>
    <string name="drink_deleted">Drink Deleted</string>

    <!-- Network error -->
    <string name="network_error">Network error</string>
    <string name="network_error_no_network_available">No Internet Connection</string>
    <string name="network_error_search_no_data_available">Sorry. Drink not available in the database. Try a new search.</string>
    <string name="network_error_check_internet_connection">Please, check your internet connection.</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_title_inspire_me">Inspire me</string>
    <string name="nav_title_alcoholic">Alcoholic</string>
    <string name="nav_title_category">Category</string>
    <string name="nav_title_favourite_ingredients">Favourite Ingredients</string>
    <string name="nav_title_glass">Glass</string>

    <!-- Widget -->
    <string name="widget_name">Mixology</string>
    <string name="widget_empty_saved_cocktails">Add a cocktail</string>

    <!-- Firebase SignOut -->
    <string name="action_sign_out">Sign Out</string>

    <!-- Admob ad unit id -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3113257282676296/3350546766</string>
    <string name="banner_ad_unit_id_details" translatable="false">ca-app-pub-3113257282676296/2081424367</string>
    <string name="banner_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="nav_bottom_home">Home</string>
    <string name="nav_bottom_saved">Saved</string>
    <string name="nav_bottom_settings">Settings</string>

    <string name="nav_item_saved_cocktails">Saved Cocktails</string>
    <string name="nav_item_hot">Hot</string>
    <string name="nav_item_randomixer">Randomixer</string>
    <string name="action_see_all">See all</string>

    <string name="settings_appearance">Appearance</string>
    <string name="settings_theme_system">System default</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>

    <string name="nav_item_non_alcoholic">Non Alcoholic</string>
    <string name="nav_item_alcoholic">Alcoholic</string>
    <string name="nav_item_cocktail">Cocktail</string>
    <string name="nav_item_ordinary_drink">Ordinary Drink</string>
    <string name="nav_item_gin">Gin</string>
    <string name="nav_item_vodka">Vodka</string>
    <string name="nav_item_cocktail_glass">Cocktail Glass</string>
    <string name="nav_item_highball_glass">Highball Glass</string>

    <!-- Share Intent detail fragment that shares data to many different apps -->
    <string name="detail_share_via">Share Via</string>
    <string name="detail_share_sent_from_mixology">Recipe Sent From Mixology !!!!!!!</string>
    <string name="detail_share_name">Name: </string>
    <string name="detail_share_alcoholic">Alcohol Content: </string>
    <string name="detail_share_instructions">Instructions: </string>
    <string name="detail_share_ingredients">Ingredients: </string>

    <!-- Randomixer swipe -->
    <string name="randomixer_save">SAVE</string>
    <string name="randomixer_nope">NOPE</string>
    <string name="randomixer_swipe_hint">Swipe right to save · Swipe left to skip</string>
    <string name="content_desc_randomixer_save">Save this cocktail</string>
    <string name="content_desc_randomixer_saved">Cocktail already saved</string>
    <string name="content_desc_randomixer_discard">Discard this cocktail</string>
    <string name="content_desc_randomixer_info">Show drink details</string>
    <string name="randomixer_already_saved">Saved</string>

    <string name="empty_string_add_a_drink">Add a drink !!! Its lonely here.</string>
    <string name="empty_string_cocktail_image">cocktail_image</string>

    <!-- Admob keys -->
    <string name="admob_app_id">ca-app-pub-3113257282676296~5106481563</string>
    <!-- Test admob app id -->
    <!--<string name="admob_key">ca-app-pub-3940256099942544~3347511713</string>-->

    <!-- Login screen-->
    <string name="login_sign_in_button_text">Sign In</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_button_text">LOGIN</string>
    <string name="login_or_sign_in_with">or sign in with</string>
    <string name="login_username_password_invalid">Either the username or the password is invalid</string>
    <string name="login_user_not_present">Please Sign Up to use Mobile Repair Service</string>
    <string name="login_message_login">Logging you in..</string>
    <string name="login_google_sign_in_failed">Google Sign In failed, Please Try Again</string>
    <string name="login_progress_msg">Logging you in…</string>

    <!-- Privacy policy -->
    <string name="privacy_policy_sign_in">By signing-in, I accept</string>
    <string name="privacy_policy_sign_up">By signing-up, I accept</string>
    <string name="privacy_policy_link">Privacy-Policy</string>

    <!-- Auth method picker -->
    <string name="fui_sign_in_with_google" translation_description="Sign in button text">Sign in with Google</string>
    <string name="fui_sign_in_with_facebook" translation_description="Sign in button text">Sign in with Facebook</string>
    <string name="fui_sign_in_with_twitter" translation_description="Sign in button text">Sign in with Twitter</string>
    <string name="fui_sign_in_with_email" translation_description="Sign in button text">Sign up with Email</string>
    <string name="fui_sign_in_with_phone" translation_description="Sign in button text">Sign in with Phone</string>

    <!-- Password reset message -->
    <string name="reset_password_message">Enter email to get reset password message</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="reset_successful_message">The email to reset password should arrive shortly</string>
    <string name="reset_unsuccessful">This email does not exist in the database</string>

    <!-- Create a new account -->
    <string name="sign_up_create_new_account">Create a new account</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_email_address">Email address</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="sign_up_title_text">Signing up</string>
    <string name="sign_up_user_exists">User with this email already exist</string>
    <string name="sign_up_please_select_strong_password">Please select a stronger password</string>
    <string name="sign_up_all_fields_required">Please fill in all the fields</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
