<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="16dp"
  android:paddingLeft="16dp"
  android:paddingRight="16dp"
  android:paddingTop="35dp">

  <ImageView
    android:id="@+id/reset_password_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:src="@drawable/ic_action_back" />

  <TextView
    android:id="@+id/finish_sign_up_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:text="@string/reset_password_message"
    android:textColor="@color/black"
    android:textSize="16sp" />

  <android.support.design.widget.TextInputLayout
    android:id="@+id/reset_password_text_input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColorHint="@android:color/darker_gray">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/reset_password_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/login_username"
      android:imeOptions="actionNext"
      android:inputType="textEmailAddress"
      android:maxLines="1"
      android:textColor="@color/black" />
  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/reset_password_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/light_gray"
    android:gravity="center"
    android:onClick="sendResetPasswordEmail"
    android:padding="14dp"
    android:text="@string/reset_password_button"
    android:textColor="@color/black" />
</LinearLayout>